upload do projeto

--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
             </button>
 
             <a href="#" class="login-link">não consegue iniciar sessão?</a>
-            <a href="#" class="login-link">criar conta</a>
+            <a href="pagCadastro.html" class="login-link">criar conta</a>
 
         </div>
             
